fix hamburger spacing in edit menu.

--- a/css/style.scss
+++ b/css/style.scss
@@ -700,6 +700,10 @@ canvas.slotgraph {
   display: none;
 }
 
+.settings .navbar-toggler-icon {
+  height: 100%;
+}
+
 .slot-number {
   color: var(--color-white);
   font-weight: bold;
